restructuring phase 2 cpmplete