@@ -1,9 +1,8 @@
 package com.razeef.bugbrother.services;
 
 import com.razeef.bugbrother.Wrappers.GitAiLayer;
-import com.razeef.bugbrother.models.CodeGuardianTask;
+import com.razeef.bugbrother.events.DebugRepositoryCommandV1;
 import com.razeef.bugbrother.parsers.FixedfileParser;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.kafka.annotation.KafkaListener;
 import org.springframework.stereotype.Service;
 
@@ -12,58 +11,146 @@ import java.util.List;
 @Service
 public class DebugWorkerService {
 
-    @Autowired
-    private GitAiLayer gitAiLayer;
-
-    @Autowired
-    private FixedfileParser parser;
-
-    @Autowired
-    private CommitService commitService;
-
-    @Autowired
-    private VectorSearchService vectorSearchService;
-
     private static final int RELATED_FILES_LIMIT = 5;
 
-    @KafkaListener(topics = "code-guardian-tasks", groupId = "code-guardian-group")
-    public void consumeTask(CodeGuardianTask task) {
-        System.out.println("Received task for repository: " + task.getOwner() + "/" + task.getRepo());
-        try {
+    private final GitAiLayer gitAiLayer;
+    private final FixedfileParser fixedfileParser;
+    private final CommitService commitService;
+    private final VectorSearchService vectorSearchService;
+    private final TaskStatusPublisher statusPublisher;
 
-            List<CommitService.FixedFile> relatedFiles = vectorSearchService.searchRelated(
-                    task.getOwner(), task.getRepo(), task.getToken(),
-                    task.getPayload().getUserQ(), List.of(), RELATED_FILES_LIMIT);
+    public DebugWorkerService(
+            GitAiLayer gitAiLayer,
+            FixedfileParser fixedfileParser,
+            CommitService commitService,
+            VectorSearchService vectorSearchService,
+            TaskStatusPublisher statusPublisher
+    ) {
+        this.gitAiLayer = gitAiLayer;
+        this.fixedfileParser = fixedfileParser;
+        this.commitService = commitService;
+        this.vectorSearchService = vectorSearchService;
+        this.statusPublisher = statusPublisher;
+    }
+
+    @KafkaListener(
+            topics = "code-guardian-tasks",
+            groupId = "code-guardian-group"
+    )
+    public void consumeTask(DebugRepositoryCommandV1 command) {
+        long sequence = 1;
+
+        try {
+            statusPublisher.running(
+                    command.taskId(),
+                    sequence++,
+                    "STARTING",
+                    "Worker accepted the debug task"
+            );
+
+            statusPublisher.running(
+                    command.taskId(),
+                    sequence++,
+                    "RETRIEVING",
+                    "Searching the repository index"
+            );
+
+            List<CommitService.FixedFile> relatedFiles =
+                    vectorSearchService.searchRelated(
+                            command.owner(),
+                            command.repo(),
+                            command.githubToken(),
+                            command.errorQuery(),
+                            List.of(),
+                            RELATED_FILES_LIMIT
+                    );
 
             if (relatedFiles.isEmpty()) {
-                System.out.println("No related files found via RAG for " + task.getOwner() + "/" + task.getRepo()
-                        + " -- index the repo first (POST /api/repos/{owner}/{repo}/index) or refine the error description.");
-                return;
+                throw new IllegalStateException(
+                        "No related files were found. "
+                                + "Index the repository before debugging."
+                );
             }
 
-            String aiResponse = gitAiLayer.askAiDebug(relatedFiles, task.getPayload().getUserQ());
+            statusPublisher.running(
+                    command.taskId(),
+                    sequence++,
+                    "GENERATING",
+                    "Generating corrected files"
+            );
 
-            if (aiResponse == null || aiResponse.trim().isEmpty()) {
-                System.out.println("No debug response generated from AI.");
-                return;
+            String aiResponse = gitAiLayer.askAiDebug(
+                    relatedFiles,
+                    command.errorQuery()
+            );
+
+            if (aiResponse == null || aiResponse.isBlank()) {
+                throw new IllegalStateException(
+                        "The model returned an empty response"
+                );
             }
 
+            List<CommitService.FixedFile> files =
+                    fixedfileParser.parseFixedFiles(aiResponse);
 
-            List<CommitService.FixedFile> files = parser.parseFixedFiles(aiResponse);
             if (files.isEmpty()) {
-                System.out.println("No valid files found in AI response.");
-                return;
+                throw new IllegalStateException(
+                        "The model response contained no valid corrected files"
+                );
             }
 
+            statusPublisher.running(
+                    command.taskId(),
+                    sequence++,
+                    "COMMITTING",
+                    "Creating the fix branch"
+            );
 
-            commitService.createFixBranchAndCommitWithLogging(task.getOwner(), task.getRepo(), files, task.getToken());
-            System.out.println("Successfully processed and committed fixes for " + task.getOwner() + "/" + task.getRepo());
+            commitService.createFixBranchAndCommitWithLogging(
+                    command.owner(),
+                    command.repo(),
+                    files,
+                    command.githubToken()
+            );
 
-            vectorSearchService.indexRepoFiles(task.getOwner(), task.getRepo(), task.getToken());
-
-        } catch (Exception e) {
-            System.err.println("Error processing task for " + task.getOwner() + "/" + task.getRepo() + ": " + e.getMessage());
-            e.printStackTrace();
+            statusPublisher.completed(
+                    command.taskId(),
+                    sequence,
+                    files.size(),
+                    files.size(),
+                    "Fix branch created with "
+                            + files.size()
+                            + " changed file(s)",
+                    "Patch validation will be added in Phase 7"
+            );
+        } catch (Exception exception) {
+            statusPublisher.failed(
+                    command.taskId(),
+                    sequence,
+                    classify(exception),
+                    exception
+            );
         }
+    }
+
+    private String classify(Exception exception) {
+        String message = exception.getMessage() == null
+                ? ""
+                : exception.getMessage();
+
+        if (message.contains("No related files")) {
+            return "NO_RETRIEVAL_RESULTS";
+        }
+
+        if (message.contains("empty response")
+                || message.contains("no valid corrected files")) {
+            return "MODEL_RESPONSE_INVALID";
+        }
+
+        if (message.contains("GitHub")) {
+            return "GITHUB_WRITE_FAILED";
+        }
+
+        return "DEBUG_TASK_FAILED";
     }
 }
